[workspace]
resolver = "2"
members = [
    # Orbit Itself
    "orbit/core",
    "orbit/macros",
    "orbit",

    # Examples
    "examples"
]

[workspace.package]
edition = "2021"
version = "1.0.1"
authors = [
    "Матвей Т <https://matveit.dev> AtomicGamer9523@github"
]
license-file = "LICENSE"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unused = "warn"
