[package]
name = "orbit-macros"
description = "Macros for Orbit"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies.orbit]
package = "orbit-core"
path = "../orbit"

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[lints]
workspace = true
