[package]
name = "orbit-macros"
description = "Macros for Orbit"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies.orbit]
package = "orbit-core"
path = "../core"

[dependencies.syn]
features = ["full"]
version = "2.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[features]
default = ["v1"]

# V1 Implementation
# Uses Vec<Box<dyn OrbitEventHandler<E>>> to store handlers
v1 = []
